# jms.unicode

./: .gitignore  CMakeLists.txt  README.md
code_gen/: CMakeLists.txt  bidi_bracket_data.hpp  bidi_character_test.hpp  bidi_mirroring_data.hpp  bidi_type_data.hpp  data_bidi_brackets.hpp  data_bidi_mirroring.hpp  data_derived_bidi_class.hpp  data_derived_general_category.hpp  data_scripts.hpp  general_category_data.hpp  main.cpp  script_data.hpp
data/: CMakeLists.txt
include/: inplace_vector
include/jcu/: constants.hpp  general_category.hpp  general_category_data.hpp  general_category_strings.hpp  script.hpp  script_data.hpp  unicode_version.hpp  utility.hpp
include/jcu/bidi/: algorithm.hpp  bidi_chain.hpp  bidi_type.hpp  bidi_type_data.hpp  bidi_type_strings.hpp  bracket_data.hpp  bracket_queue.hpp  isolating_run.hpp  level.hpp  level_run.hpp  mirroring_data.hpp  run_queue.hpp  runs.hpp  status_stack.hpp
include/jcu/data/: bidi_brackets.hpp  bidi_mirroring.hpp  bidi_type.hpp  bracket.hpp  derived_general_category.hpp  general_category.hpp  mirroring.hpp  script.hpp  scripts.hpp
include/jcu/strings/: bidi_type.hpp  general_category.hpp  script.hpp
include/jcu/ucd/: base_iterator.hpp  bidi_brackets.hpp  bidi_character_test.hpp  bidi_mirroring.hpp  bidi_test.hpp  derived_bidi_class.hpp  derived_general_category.hpp  property_value_aliases.hpp  scripts.hpp  unicode_data.hpp  utility.hpp
include/jcu/utf/: concepts.hpp  core.hpp  decode.hpp  decode_encode.hpp  encode.hpp  exceptions.hpp  format.hpp  format_utf8.hpp  iterators.hpp  strings.hpp  utf.hpp  utility.hpp  views.hpp
tests/: CMakeLists.txt
tests/bidi/: basic.test.cpp  bidi_character.test.cpp  bidi_test.test.cpp
tests/utf/: core.test.cpp  decode.test.cpp  decode_encode.test.cpp  encode.test.cpp  format.test.cpp  iterators.test.cpp  utility.test.cpp  views.test.cpp
